--- a/src/main.css
+++ b/src/main.css
@@ -1,9 +1,77 @@
-.successful {
-    color: #008000;
+* {
+    font-family: Helvetica;
 }
 
-.unsuccessful {
+app-view {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+duration-view {
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 24pt;
+    padding: 5px;
+    margin-right: 2px;
+}
+
+duration-view.successful {
+    color: #008000;
+    border-color: #008000;
+    background-color: #00800022;
+}
+
+duration-view.unsuccessful {
     color: #AA0000;
+    border: 1px solid #AA0000;
+    background-color: #AA000022;
+}
+
+changeset-view {
+    flex-grow: 1;
+    display: flex;
+    height: 100%;
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+
+.committer {
+    width: 80px;
+    margin: 5px;
+}
+
+.committer>img {
+    width: 100%;
+}
+.committer>p {
+    width: 100%;
+    text-align: center;
+    padding: 0px;
+    margin: 0px;
+    font-style: italic;
+}
+
+.changeset {
+    list-style: none;
+    padding: 0px;
+    width: 100%;
+}
+
+.changeset>li {
+    padding: 2px;
+}
+
+.changeset>li:nth-child(even) {
+    background-color: #EEEEEE;
 }
 
 .pipeline {
@@ -20,19 +88,21 @@
     margin: 2px;
 }
 
-.successfulStage {
+.stage.successful {
     border: 1px solid #008800;
     border-bottom: 5px solid #008000;
     background: #00800022;
+    color: #008000;
 }
 
-.unsuccessfulStage {
+.stage.unsuccessful {
     border: 1px solid #AA0000;
     border-bottom: 5px solid #AA0000;
     background: #AA000022;
+    color: #AA0000;
 }
 
-.progress {
+.stage..progress {
     -webkit-animation: blinkingProgress 1s infinite;  /* Safari 4+ */
     -moz-animation: blinkingProgress 1s infinite;  /* Fx 5+ */
     -o-animation: blinkingProgress 1s infinite;  /* Opera 12+ */
@@ -46,9 +116,4 @@
     50%, 100% {
         border-bottom: 1px solid #008000;
     }
-}
-
-
-* {
-    font-family: Helvetica;
 }
