--- a/src/main.css
+++ b/src/main.css
@@ -2,16 +2,30 @@
     font-family: Helvetica;
 }
 
-app-view {
+dashboard-view {
     width: 100%;
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
 }
 
 .header {
     display: flex;
     flex-direction: row;
     width: 100%;
+}
+
+.header>.right {
+    flex-grow: 1;
+    height: 100%;
+    flex-direction: row;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.header>.right>.title{
+    font-size: 24pt;
 }
 
 duration-view {
@@ -39,10 +53,6 @@ duration-view.unsuccessful {
 changeset-view {
     flex-grow: 1;
     display: flex;
-    height: 100%;
-    border: 1px solid gray;
-    border-radius: 5px;
-    padding: 5px;
 }
 
 .committer {
@@ -104,7 +114,8 @@ changeset-view {
     color: #AA0000;
 }
 
-.stage..progress {
+.stage.progress {
+    background: #FFFFFF;
     -webkit-animation: blinkingProgress 1s infinite;  /* Safari 4+ */
     -moz-animation: blinkingProgress 1s infinite;  /* Fx 5+ */
     -o-animation: blinkingProgress 1s infinite;  /* Opera 12+ */
